tests/codegen/errors/env/env/define.signature.mismatch/atom.menu.error.env.define.signature.mismatch.002/menu-env-define.signature.mismatch-002.mon
;; TEST-ID: tests.codegen.menu.errors.env.define.signature.mismatch.002
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: env/define.signature.mismatch
;; TEST-MENU: errors/env/define.signature.mismatch/atom.menu.error.env.define.signature.mismatch.002
;; TEST-MENU-PATH: codegen/errors/env/define.signature.mismatch/atom.menu.error.env.define.signature.mismatch.002
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin env.c diagnostic: Signature mismatch for definition
;; TEST-ATOM: atom.menu.error.env.define.signature.mismatch.002
;; TEST-CODEGEN-ATOM: atom.menu.error.env.define.signature.mismatch.002
;; TEST-ATOM-LEAF: atom.menu.error.env.define.signature.mismatch.002
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: env
;; TEST-ERROR-FAMILY: define.signature.mismatch
;; TEST-ERROR-MESSAGE: Signature mismatch for definition
;; TEST-ERROR-SOURCE: env.c
;; TEST-ERROR-PATH: env.c:695
;; TEST-CODEGEN-PATH: diagnostic.env.define.signature.mismatch
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: env
;; TEST-TAG: menu
;; TEST-COVERAGE: env.c:695 Signature mismatch for definition
;; TEST-USES-ATOM: atom.menu.error.env.define.signature.mismatch.002
;; TEST-USES-ATOM: atom.error.env
;; TEST-USES-ATOM: atom.error.env.define.signature.mismatch
;; TEST-USES-ATOM: atom.env.error
;; TEST-DEPENDS-ON: atom.env.hm.check.call
;; TEST-DEPENDS-ON: atom.env.hm.infer.define
;; TEST-REFINES: atom.error.env
;; TEST-REFINES: atom.error.env.define.signature.mismatch
;; TEST-REFINES: atom.env.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors env env

(module Main)
(define (env_menu_sig_mismatch_2_2 [x : Int] -> Int) "bad")
(show (env_menu_sig_mismatch_2_2 1))
